--- a/RunToYou/Info.plist
+++ b/RunToYou/Info.plist
@@ -2,10 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>사용자의 위치 정보와 걸음 수를 제공하기 위해 권한이 필요합니다.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>사용자의 위치 정보와 걸음 수를 제공하기 위해 권한이 필요합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용자의 위치 정보와 걸음 수를 제공하기 위해 권한이 필요합니다.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>카메라 사용</string>
+	<string>사용자의 사진 공유를 위해 카메라 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>앨범 사용</string>
+	<string>사용자의 사진 공유를 위해 앨범 권한이 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>NotoSansKR-Thin.ttf</string>
