--- a/RunToYou/Info.plist
+++ b/RunToYou/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>사용자의 위치 정보와 걸음 수를 제공하기 위해 권한이 필요합니다.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
